# Renga

./: .gitignore  CMakeLists.txt  COMPILING.md  Jamfile  LICENSE  README.md  TODO.txt  doap.xml  makefile
jabber/: AboutWindow.cpp  AboutWindow.h  Agent.cpp  Agent.h  AgentList.cpp  AgentList.h  BetterTextView.cpp  BetterTextView.h  BitmapButton.cpp  BitmapButton.h  Blabber.proj  BlabberApp.cpp  BlabberApp.h  BlabberMainWindow.cpp  BlabberMainWindow.h  BlabberSettings.cpp  BlabberSettings.h  BubbleView.cpp  BubbleView.h  BuddyInfoWindow.cpp  BuddyInfoWindow.h  BuddyWindow.cpp  BuddyWindow.h  ChangeNameWindow.cpp  ChangeNameWindow.h  ChatTextView.cpp  ChatTextView.h  ChatWidget.cpp  ChatWidget.h  CommandMessage.cpp  CommandMessage.h  CustomStatusWindow.cpp  CustomStatusWindow.h  DeskbarIcon.cpp  DeskbarIcon.h  EditingFilter.cpp  EditingFilter.h  FileItem.h  FileXMLReader.cpp  GenericFunctions.cpp  (+60 more)
jabber/resources/user-guide/: user_guide.html
network/: BobStore.cpp  BobStore.h  BookmarkManager.cpp  BookmarkManager.h  Extensions.h  GlooxHandler.cpp  GlooxHandler.h  bob.cpp  bob.h  bobhandler.h  bookmark2storage.cpp  bookmark2storage.h  media.cpp  media.h  mediahandler.h
resources/: license.txt
resources/icons/: offline.hvif  online-highlight.hvif  online-highlight.iom  online-idle.hvif  online-idle.iom  online.hvif  online.iom  unknown.hvif
resources/user-guide/: user_guide.html
shared/configuration/: Configuration.cpp  Configuration.h  Configuration.proj
shared/expat/gennmtab/: gennmtab
shared/expat/xml_entity/: XMLEntity.cpp  XMLEntity.h
shared/expat/xml_reader/: XMLReader.cpp  XMLReader.h
shared/expat/xmlwf/: xmlwf
shared/interface/: BitmapButton.cpp  BitmapButton.h  FileItem.cpp  FileItem.h  MessageRepeater.h  ProxyLooper.cpp  StatusView.cpp  StatusView.h
shared/network/: JabberPlug.h  JabberSSLPlug.cpp  JabberSSLPlug.h  JabberSocketPlug.cpp  JabberSocketPlug.h  PortTalker.cpp  PortTalker.h
shared/split-pane/: SplitPane.cpp  SplitPane.h
shared/storage/: AppLocation.cpp  AppLocation.h  FileXMLReader.cpp
support/: BeDC.h  LogHandler.h  main.cpp
tests/: GlooxMock.cpp  Test.cpp
ui/: AboutWindow.cpp  AddBuddyWindow.cpp  AddBuddyWindow.h  BookmarkItem.cpp  BookmarkItem.h  BuddyInfoWindow.cpp  BuddyInfoWindow.h  ChangeNameWindow.cpp  ChangeNameWindow.h  EditingFilter.cpp  EditingFilter.h  HVIFUtil.cpp  HVIFUtil.h  MainWindow.cpp  MainWindow.h  ModalAlertFactory.cpp  PeopleListItem.cpp  PictureView.cpp  PictureView.h  RegisterAccountWindow.cpp  RegisterAccountWindow.h  RosterSuperitem.cpp  RosterSuperitem.h  RotateChatFilter.cpp  RotateChatFilter.h  TalkView.cpp  TalkView.h
